# Data-Cleaning-Transformation-Toolkit

./: README.md  __init__.py  apply_on_iris.py  apply_on_titanic.py  ci.yml  dashboard.json  logging.py  pipeline.py  pyproject.toml  test_cleanit.py  titanic_like.csv  transforms.py
