[build-system]
requires = ["setuptools>=69.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cleanit"
version = "0.1.0"
description = "Reusable data cleaning and transformation toolkit for messy datasets"
readme = "README.md"
authors = [{name="Zoya Khan", email="gmktechnologysolutions@gmail.com"}]
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
    "pandas>=2.1.0",
    "numpy>=1.26.0",
    "scikit-learn>=1.4.0",
    "python-dotenv>=1.0.1",
    "tabulate>=0.9.0",
]

[project.urls]
Homepage = "https://github.com/your-username/data-cleaning-toolkit"
